--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
 /**
- * Theme Name:     Business Child
- * Author:         eVision Themes
- * Template:       business-click
- * Text Domain:	   business-child
- * Description:    Business Click is a modern and flexible WordPress Business Theme that suits for agency, blog, business, corporate, eCommerce, magazines, portfolios and many more. It
+Theme Name: Business Child
+Theme URI: http://evisionthemes.com/product/business-click/
+Author: eVision Themes
+Author URI: http://evisionthemes.com/
+Template: business-click
+Text Domain: business-child
+Description: Business Child is a modern and flexible WordPress Business Child Theme of Business Click.
+Version: 1.0.0
+License: GNU General Public License v3 or later
+License URI: http://www.gnu.org/licenses/gpl-3.0.html
+Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready, left-sidebar, right-sidebar, blog, e-commerce, theme-options, custom-colors, full-width-template, one-column, grid-layout, footer-widgets, portfolio
  */
