--- a/style.css
+++ b/style.css
@@ -236,6 +236,9 @@ a:hover, .evt-item article .entry-title a:hover, a.readmore, .readmore, .breadcr
 #evt-call-to-action p {
   display: none;
 }
+#evt-call-to-action .btn {
+  max-height: 34px;
+}
 
 #evt-why-us .row .col:first-child {
   order: 2;
