--- a/style.css
+++ b/style.css
@@ -233,6 +233,9 @@ a:hover, .evt-item article .entry-title a:hover, a.readmore, .readmore, .breadcr
 #evt-call-to-action .evt-img-overlay {
   background-color: transparent;
 }
+#evt-call-to-action .widget-title {
+  margin-bottom: 0 !important;
+}
 #evt-call-to-action p {
   display: none;
 }
