--- a/style.css
+++ b/style.css
@@ -188,42 +188,42 @@ a:hover, .evt-item article .entry-title a:hover, a.readmore, .readmore, .breadcr
   text-shadow: none;
 }
 
-#evt-featured .evt-carousel.slick-slider:not(.slidesToShow-one) .slick-list .slick-slide {
+body.has-featured-slider #evt-featured .evt-carousel.slick-slider:not(.slidesToShow-one) .slick-list .slick-slide {
   margin-left: 0;
   margin-right: 0;
 }
-#evt-featured .evt-img-overlay {
+body.has-featured-slider #evt-featured .evt-img-overlay {
   padding-top: 0;
 }
 @media (min-width: 992px) {
-  #evt-featured {
+  body.has-featured-slider #evt-featured {
     margin-top: -50px;
   }
-  #evt-featured .slick-track .slick-slide {
+  body.has-featured-slider #evt-featured .slick-track .slick-slide {
     margin-top: 40px;
   }
-  #evt-featured .slick-track .slick-slide.slick-current + div {
+  body.has-featured-slider #evt-featured .slick-track .slick-slide.slick-current + div {
     margin-top: 0;
   }
-  #evt-featured .slick-track .slick-slide.slick-current + div .evt-featured-item {
+  body.has-featured-slider #evt-featured .slick-track .slick-slide.slick-current + div .evt-featured-item {
     padding-top: 60px;
   }
 }
-#evt-featured .widget-title,
-#evt-featured .evt-featured-item-wrap {
+body.has-featured-slider #evt-featured .widget-title,
+body.has-featured-slider #evt-featured .evt-featured-item-wrap {
   background-color: #fff;
 }
-#evt-featured .widget-title {
+body.has-featured-slider #evt-featured .widget-title {
   padding-top: 40px;
 }
-#evt-featured .evt-featured-item-wrap {
+body.has-featured-slider #evt-featured .evt-featured-item-wrap {
   padding: 0;
   background-color: #fff;
 }
-#evt-featured .evt-featured-item-wrap .evt-featured-item {
+body.has-featured-slider #evt-featured .evt-featured-item-wrap .evt-featured-item {
   transition: 0.3s all ease;
 }
-#evt-featured .evt-featured-item-wrap .evt-featured-item:hover {
+body.has-featured-slider #evt-featured .evt-featured-item-wrap .evt-featured-item:hover {
   background-color: #ed4d0020;
 }
 
