Theme Business Kid added.

--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /**
-Theme Name: Business Child
+Theme Name: Business Kid
 Theme URI: http://evisionthemes.com/product/business-click/
 Author: eVision Themes
 Author URI: http://evisionthemes.com/
 Template: business-click
-Text Domain: business-child
-Description: Business Child theme is a clean and simple child theme of Business Click with flexible features. No coding required. You can create a professional website within few moments. It's free! This creative theme supports popular plugins like Jetpack, WP page navi, Contact form 7, Elementor page builder, Page Builder by SiteOrigin, W3 Total Cache, Social Pug, All in One SEO Pack, MailChimp, WooCommerce etc. If you are a non-techy person, you can easily modify the theme and design using live customizer in Dashboard > Appearance> Customize. You can change the color and the font of each and every text, link in the theme.
+Text Domain: business-kid
+Description: Business Kid theme is a clean and simple child theme of Business Click with flexible features. No coding required. You can create a professional website within few moments. It's free! This creative theme supports popular plugins like Jetpack, WP page navi, Contact form 7, Elementor page builder, Page Builder by SiteOrigin, W3 Total Cache, Social Pug, All in One SEO Pack, MailChimp, WooCommerce etc. If you are a non-techy person, you can easily modify the theme and design using live customizer in Dashboard > Appearance> Customize. You can change the color and the font of each and every text, link in the theme.
 Version: 1.0.0
 License: GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
