--- a/style.css
+++ b/style.css
@@ -120,6 +120,25 @@ a:hover, .evt-item article .entry-title a:hover, a.readmore, .readmore, .breadcr
   color: #ed4d00;
 }
 
+/* css3 gradient */
+.css-gradient,
+.evt-banner-image.css-gradient {
+  background: black;
+  background: -moz-linear-gradient(40deg, black 0%, #ed4d00 100%);
+  background: -webkit-linear-gradient(40deg, black 0%, #ed4d00 100%);
+  background: linear-gradient(40deg, black 0%, #ed4d00 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#ed4d00",GradientType=1);
+  background-size: cover;
+  background-position: center center;
+}
+
+#evt-preloader {
+  background-color: #ed4d00;
+}
+#evt-preloader #status i {
+  color: #fff;
+}
+
 .widget-title, .widgettitle, .woocommerce div.product .product_title, .page-title, body .entry-title {
   margin-bottom: 30px !important;
 }
@@ -222,9 +241,6 @@ body.has-featured-slider #evt-featured .evt-featured-item-wrap {
 }
 body.has-featured-slider #evt-featured .evt-featured-item-wrap .evt-featured-item {
   transition: 0.3s all ease;
-}
-body.has-featured-slider #evt-featured .evt-featured-item-wrap .evt-featured-item:hover {
-  background-color: #ed4d0020;
 }
 
 #evt-call-to-action {
