--- a/style.css
+++ b/style.css
@@ -127,10 +127,10 @@ a:hover, .evt-item article .entry-title a:hover, a.readmore, .readmore, .breadcr
 .css-gradient,
 .evt-banner-image.css-gradient {
   background: black;
-  background: -moz-linear-gradient(40deg, black 0%, #ed4d00 100%);
-  background: -webkit-linear-gradient(40deg, black 0%, #ed4d00 100%);
-  background: linear-gradient(40deg, black 0%, #ed4d00 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#ed4d00",GradientType=1);
+  background: -moz-linear-gradient(40deg, #872c00 0%, #ed4d00 100%);
+  background: -webkit-linear-gradient(40deg, #872c00 0%, #ed4d00 100%);
+  background: linear-gradient(40deg, #872c00 0%, #ed4d00 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="darken($business_child_color, 20%)",endColorstr="#ed4d00",GradientType=1);
   background-size: cover;
   background-position: center center;
 }
@@ -244,6 +244,9 @@ body.has-featured-slider #evt-featured .evt-featured-item-wrap {
 }
 body.has-featured-slider #evt-featured .evt-featured-item-wrap .evt-featured-item {
   transition: 0.3s all ease;
+}
+body.has-featured-slider #evt-featured .evt-featured-item-wrap .evt-featured-item:hover {
+  background-color: #ed4d0020;
 }
 
 #evt-call-to-action {
